<resources>
    <string name="app_name">CountriesApp</string>
    <string name="title_continents">Continets</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="label_title_cities">Cities</string>
    <string name="select_a">Select a</string>
    <string name="continent">Continent</string>
    <string name="search_label">Search</string>
    <string name="label_capital">Capital</string>
    <string name="title_capital">Type the capital and get the country</string>
    <string name="getYourPosition">Get your</string>
    <string name="positionLabel">Position</string>
    <string name="capital_label">Capital</string>
    <string name="location_label">Location</string>
    <string name="save_current_location">Save Current Location</string>
    <string name="current_location">--- Current Location ---</string>
    <string name="cities_near_to_you">--- Cities near to you ---</string>
    <string name="favorites">Favorites</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="country_name">Country Name</string>
    <string name="locality">Locality</string>
    <string name="address">Address</string>
    <string name="memories">--- Memories ---</string>
    <string name="memory_description">Memory Description</string>
    <string name="add_your_description_here">Add your description here</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="region">Region: </string>
</resources>