<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.favorites.dialog.AddShowMemoryDescriptionDialog">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/memory_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvActualDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiloContentDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvActualDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietActualContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/add_your_description_here" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabConfirtamitionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_check_24"
        android:backgroundTint="#11f22b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_replay_24"
        android:backgroundTint="@color/CoolGray"
        app:layout_constraintEnd_toStartOf="@+id/fabCloseButton"
        app:layout_constraintStart_toEndOf="@+id/fabConfirtamitionButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#b30d04"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/close" />
</androidx.constraintlayout.widget.ConstraintLayout>